--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     
     <hr>
         <H3> Interceptor </H3>
-        <a href="./assets/images/birthday-invite.png" alt="Interceptor Movie Poster">
-        <img src="./assets/images/birthday-invite.png" height="200"><b> </b>
+        <a href="./images/birthday-invite.png" alt="Interceptor Movie Poster">
+        <img src="./images/birthday-invite.png" height="200"><b> </b>
         <p> its awesome and i love the sci-fi part </p>
 
         <h3> To kill a monkeey </h3>
-        <a href="./assets/images/movie-ranking.png" alt="To Kill a Monkey Movie Poster">
-            <img src="./assets/images/movie-ranking.png" height="200">
+        <a href="./images/movie-ranking.png" alt="To Kill a Monkey Movie Poster">
+            <img src="./images/movie-ranking.png" height="200">
         </a>
         <br> 
  <a href="./public/contact.html" alt="Contact me Page"> Contact me</a> |
