--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <p> its awesome and i love the sci-fi part </p>
 
         <h3> To kill a monkeey </h3>
-        <a href="./images/movie-ranking.png" alt="To Kill a Monkey Movie Poster">
-            <img src="./images/movie-ranking.png" height="200">
+        <a href="movie-ranking.png" alt="To Kill a Monkey Movie Poster">
+            <img src="movie-ranking.png" height="200">
         </a>
         <br> 
- <a href="./public/contact.html" alt="Contact me Page"> Contact me</a> |
- <a href="./public/about.html" alt="About me Page"> About me</a>
+ <a href="contact.html" alt="Contact me Page"> Contact me</a> |
+ <a href="about.html" alt="About me Page"> About me</a>
     </body> 
